ldap_config: remove POST in API
Why: it does the same thing as the PUT and is not useful in that case. The GET
will return a schema with all fields set to null instead of returning a 404
when there is no config in the database.
